# NennerEngine

./: .env.template  .gitignore  ARCHITECTURE.md  CLAUDE.md  COMMANDS.md  Fischer_Agent_Specification.docx  Fischer_Agent_Specification_v2.md  Kill_Claude.bat  Launch_Claude.bat  NennerSignals.xlsx  README_NennerEngine.md  apply_manual_review_fixes.py  dashboard.py  fischer_test_email.html  install_morning_task.ps1  install_scheduled_task.ps1  launch_dashboard.pyw  launch_monitor.pyw  morning_startup.ps1  nenner_engine.py  pyproject.toml  restart_dashboard.bat  restart_dashboard.ps1  send_track_record.py  signal_performance_report.py  signal_price_audit.py  signal_price_audit_report.txt  test_nenner_engine.py  track_record_report.md  update_signals_sheet.py
.github/workflows/: test.yml
_archive/: generate_review_package.py  remaining_ambiguous_12.txt
dashboard/: __init__.py  app.py  components.py  data.py  lifecycle.py  pages.py
docs/: trade_journal.md
nenner_engine/: FischerIV.bas  __init__.py  __main__.py  _oc_reader.py  _pos_reader.py  _xl_reader.py  alert_dispatch.py  alerts.py  anomaly_check.py  api.py  auto_cancel.py  cli.py  config.py  databento_feed.py  db.py  email_scheduler.py  equity_stream.py  error_ledger.py  fischer_chain.py  fischer_daily_report.py  fischer_disclosure.txt  fischer_engine.py  fischer_reliability.py  fischer_scanner.py  fischer_signals.py  fischer_subscribers.py  imap_client.py  instruments.py  llm_parser.py  parser.py  positions.py  postmaster.py  prices.py  reporting.py  signal_queries.py  stanley.py  stock_report.py  strike_increments.json  trade_stats.py  tz.py  (+1 more)
nenner_engine/stock_report/: __init__.py  data.py  html.py  llm.py
review_package/: manual_review_items.csv  review_summary.txt
review_package/emails_to_review/: 2019-02-06_#2019  021 Charles Nenner Research Center  Morning Update.txt  2019-02-08_#2019 - 022 Charles Nenner Research Center - Morning Update.txt  2019-02-13_#2019 - 024 Charles Nenner Research Center - Morning Update.txt  2019-10-13_Sunday  Monday Morning Update - October 13  14 #2019-158.txt  2020-02-10_Monday Morning Update - February 10 #2020-022.txt  2020-02-16_Sunday Cycle Chart - February 16 #2020-025.txt  2020-02-17_Monday Morning Update - February 17 #2020-026.txt  2020-03-27_Friday Morning Update - March 27 #2020-046.txt  2020-04-21_Special Edition Update - April 21 #2020-059.txt  2020-06-05_Friday Morning Update - June 5 #2020-083.txt  2020-08-18_Intraday #92  SP Nasdaq Euro UNG Corn  Nat Gas.txt  2020-09-02_Wednesday Morning Update - September 2 #2020-130.txt  2020-12-02_Wednesday Morning Update - December 2 #2020-183.txt  2020-12-07_Monday Morning Update - December 7 #2020-186.txt  2021-02-19_Friday Morning Update - February 19 #2021-032.txt  2021-02-28_Sunday Cycle Chart - February 28 #2021 -037.txt  2021-04-11_Sunday Cycle Chart - April 11 #2021 -060.txt  2021-05-21_Friday Morning Update - May 21 #2021-088.txt  2021-07-06_Intraday #57 -Nasdaq Gold Crude Corn Lumber Soybean.txt  2021-08-02_Monday Morning Update - August 2 #2021-129.txt  (+16 more)
scripts/: email_report.py  generate_refactor_report.py  install_service.ps1  nightly_restart_services.ps1  reparse_with_llm.py  seed_knowledge.py  signal_performance_report.py  track_record_analysis.py  update_signals_sheet.py  watchdog_heartbeat.ps1  watchdog_silent.vbs
tests/: conftest.py  test_anomaly_check.py  test_api.py  test_atomicity.py  test_auto_cancel.py  test_cancel_breach.py  test_compute_current_state.py  test_dashboard_split.py  test_email_scheduler_state_machine.py  test_evaluate_price_alerts.py  test_fischer_engine.py  test_get_prices_with_signal_context.py  test_imap_client.py  test_instruments.py  test_llm_parser.py  test_positions.py  test_postmaster.py  test_prices.py  test_settlement.py  test_stock_report.py  test_tz.py  test_within_window.py
(+34 files in other folders)
